--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@playwright/test": "^1.19.1",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/luxon": "^2.0.9",
+    "luxon": "^2.3.1",
     "node-sass": "^7.0.1",
     "sass": "^1.49.8",
     "svelte": "^3.44.0",
