first pass at gallery

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@types/luxon": "^2.0.9",
+    "@types/masonry-layout": "^4.2.4",
     "luxon": "^2.3.1",
+    "masonry-layout": "^4.2.2",
     "node-sass": "^7.0.1",
     "sass": "^1.49.8",
     "svelte": "^3.44.0",
