--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.19.1",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "^1.0.0-next.31",
+    "@sveltejs/kit": "^1.0.0-next.295",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
+    "contentful-management": "^8.2.0",
     "luxon": "^2.3.1",
     "masonry-layout": "^4.2.2",
     "node-sass": "^7.0.1",
     "sass": "^1.49.8",
+    "slugify": "^1.6.5",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
