--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "maj",
   "version": "0.0.1",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "svelte-kit dev --open",
     "build": "svelte-kit build",
@@ -12,8 +15,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.19.1",
-    "@sveltejs/adapter-auto": "^1.0.0-next.31",
-    "@sveltejs/kit": "^1.0.0-next.295",
+    "@sveltejs/adapter-auto": "^1.0.0-next.43",
+    "@sveltejs/kit": "^1.0.0-next.335",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
     "contentful-management": "^8.2.0",
