--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "svelte-kit preview",
     "test": "playwright test",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "db:pull": "prisma db pull",
+    "db:generate": "prisma generate"
   },
   "devDependencies": {
     "@playwright/test": "^1.19.1",
@@ -23,6 +25,7 @@
     "luxon": "^2.3.1",
     "masonry-layout": "^4.2.2",
     "node-sass": "^7.0.1",
+    "prisma": "^3.14.0",
     "sass": "^1.49.8",
     "slugify": "^1.6.5",
     "svelte": "^3.44.0",
@@ -32,5 +35,8 @@
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@prisma/client": "^3.14.0"
+  }
 }
