--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "svelte-kit dev --open",
-    "build": "svelte-kit build",
+    "dev": "vite dev --open --port 3000",
+    "build": "vite build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "test": "playwright test",
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.19.1",
-    "@sveltejs/adapter-auto": "^1.0.0-next.43",
-    "@sveltejs/kit": "^1.0.0-next.335",
+    "@sveltejs/adapter-auto": "^1.0.0-next.61",
+    "@sveltejs/kit": "^1.0.0-next.377",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
     "contentful-management": "^8.2.0",
@@ -26,14 +26,14 @@
     "masonry-layout": "^4.2.2",
     "node-sass": "^7.0.1",
     "prisma": "^3.14.0",
-    "sass": "^1.49.8",
+    "sass": "^1.53.0",
     "slugify": "^1.6.5",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.0",
     "svelte-gestures": "^1.4.1",
-    "svelte-preprocess": "^4.10.1",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.4"
+    "svelte-preprocess": "^4.10.7",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   },
   "type": "module",
   "dependencies": {
