Import des expos

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@sveltejs/kit": "^1.0.0-next.377",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
+    "@types/mime": "^3.0.1",
     "contentful-management": "^8.2.0",
     "luxon": "^2.3.1",
     "masonry-layout": "^4.2.2",
+    "mime": "^3.0.0",
     "node-sass": "^7.0.1",
     "prisma": "^3.14.0",
     "sass": "^1.53.0",
