--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@playwright/test": "^1.19.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.61",
+    "@sveltejs/adapter-node": "^1.0.0-next.80",
     "@sveltejs/kit": "^1.0.0-next.377",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
@@ -43,6 +44,7 @@
     "@prisma/client": "^3.14.0",
     "embla-carousel-auto-height": "^7.0.0",
     "embla-carousel-autoplay": "^7.0.0",
-    "embla-carousel-svelte": "^7.0.0"
+    "embla-carousel-svelte": "^7.0.0",
+    "embla-carousel-wheel-gestures": "^3.0.0"
   }
 }
