--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "scripts": {
     "dev": "vite dev --open --port 3000",
     "build": "vite build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "package": "vite package",
+    "preview": "vite preview",
     "test": "playwright test",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "db:pull": "prisma db pull",
     "db:generate": "prisma generate"
   },
   "devDependencies": {
     "@playwright/test": "^1.19.1",
-    "@sveltejs/adapter-auto": "^1.0.0-next.61",
-    "@sveltejs/adapter-node": "^1.0.0-next.80",
-    "@sveltejs/kit": "^1.0.0-next.377",
+    "@sveltejs/adapter-auto": "^1.0.0-next.80",
+    "@sveltejs/adapter-node": "^1.0.0-next.96",
+    "@sveltejs/kit": "^1.0.0-next.511",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
     "@types/mime": "^3.0.1",
@@ -27,9 +27,8 @@
     "luxon": "^2.3.1",
     "masonry-layout": "^4.2.2",
     "mime": "^3.0.0",
-    "node-sass": "^7.0.1",
     "prisma": "^3.14.0",
-    "sass": "^1.53.0",
+    "sass": "^1.55.0",
     "slugify": "^1.6.5",
     "svelte": "^3.49.0",
     "svelte-carousel": "^1.0.19",
@@ -37,7 +36,8 @@
     "svelte-gestures": "^1.4.1",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^3.1.6"
   },
   "type": "module",
   "dependencies": {
