--- a/package.json
+++ b/package.json
@@ -12,24 +12,27 @@
     "preview": "vite preview",
     "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "db:pull": "prisma db pull",
     "db:generate": "prisma generate"
   },
   "devDependencies": {
     "@playwright/test": "^1.19.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.80",
-    "@sveltejs/adapter-node": "^1.0.0-next.96",
+    "@sveltejs/adapter-node": "^1.0.0-next.98",
     "@sveltejs/kit": "^1.0.0-next.511",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
     "@types/mime": "^3.0.1",
-    "contentful-management": "^8.2.0",
+    "@types/slug": "^5.0.3",
+    "contentful-management": "^10.18.1",
     "luxon": "^2.3.1",
     "masonry-layout": "^4.2.2",
     "mime": "^3.0.0",
     "prisma": "^3.14.0",
+    "regenerator-runtime": "^0.13.10",
     "sass": "^1.55.0",
+    "slug": "^8.2.2",
     "slugify": "^1.6.5",
     "svelte": "^3.49.0",
     "svelte-carousel": "^1.0.19",
