--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/adapter-auto": "^1.0.0-next.80",
     "@sveltejs/adapter-node": "^1.0.0-next.98",
     "@sveltejs/kit": "^1.0.0-next.511",
+    "@types/gtag.js": "^0.0.12",
     "@types/luxon": "^2.0.9",
     "@types/masonry-layout": "^4.2.4",
     "@types/mime": "^3.0.1",
